--- a/unit/FFT/CMakeLists.txt
+++ b/unit/FFT/CMakeLists.txt
@@ -11,10 +11,9 @@ separate_arguments(REAL_MPI_COMMAND UNIX_COMMAND ${MPI_COMMAND})
 add_test(NAME FFT_test COMMAND ${REAL_MPI_COMMAND} ./FFT)
 
 if (YAKL_SYCL_BBFFT)
-  #  list(APPEND CMAKE_PREFIX_PATH ${YAKL_SYCL_BBFFT_HOME})
 
   if (YAKL_SYCL_BBFFT_AOT)
-    message("Building with BBFFT AOT")
+    message("-- Building with BBFFT AOT")
     find_package(bbfft-sycl REQUIRED)
     find_program(OCLOC ocloc REQUIRED)
     add_executable(yakl-aot-generate generate.cpp configurations.cpp)
@@ -24,12 +23,12 @@ if (YAKL_SYCL_BBFFT)
     set(SRC_FILE "kernels.cl")
     set(NAMES_FILE "aot_compiled_kernels.cpp")
     if (YAKL_SYCL_BBFFT_AOT_LEGACY_UMD)
-      message("Building with legacy UMD")
-      # older UMD - agama-ci-devel <= 543
+      message("-- Building with legacy UMD")
+      # older UMD - ci-neo-master <= 025137
       set(BIN_FILE "kernels_XE_HPC_COREpvc.bin")
     else()
-      message("Building with standard UMD")
-      # newer UMD - ci-neo-master >= 025611
+      message("-- Building with standard UMD")
+      # newer UMD - ci-neo-master >= 025375
       set(BIN_FILE "kernels_pvc.bin")
     endif()
     set(OBJ_FILE "kernels.o")
@@ -40,7 +39,7 @@ if (YAKL_SYCL_BBFFT)
       COMMAND ${OCLOC} compile -file ${SRC_FILE} -device pvc -internal_options "-cl-ext=+cl_khr_fp64"
       COMMAND ${CMAKE_LINKER} -r -b binary -o ${OBJ_FILE} ${BIN_FILE}
       DEPENDS yakl-aot-generate
-      COMMENT "Ahead-of-time compilation of FFT kernels"
+      COMMENT "-- Ahead-of-time compilation of FFT kernels"
     )
     add_library(yakl-kernels OBJECT IMPORTED)
     set_property(TARGET yakl-kernels PROPERTY IMPORTED_OBJECTS "${CMAKE_CURRENT_BINARY_DIR}/${OBJ_FILE}")
@@ -48,6 +47,6 @@ if (YAKL_SYCL_BBFFT)
 
     target_link_libraries(FFT yakl-kernels)
   else()
-    message("Building with BBFFT JIT")
+    message("-- Building with BBFFT JIT")
   endif()
 endif()
